--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /public/storage
 /storage/*.key
 /vendor
+/.idea
+/idea
 #.env
 .phpunit.result.cache
 Homestead.json
@@ -10,4 +12,3 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .editorconfig
-/.idea
